# games-cpp

./: README.md
cmakeSetup/: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.txt
cmakeSetup/.claude/: settings.local.json
cmakeSetup/src/gameLayer/: gameLayer.cpp
marioKart/: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.txt  SPEC.md  logs.txt
marioKart/include/gameLayer/: gameConfig.h  gameEvents.h  gameState.h  itemSystems.h  renderer.h  trackSystems.h
marioKart/resources/: fragment.frag  vertex.vert
marioKart/src/gameLayer/: gameEvents.cpp  gameLayer.cpp  gameState.cpp  itemSystems.cpp  renderer.cpp  trackSystems.cpp
marioKart/src/platform/: glfwMain.cpp  platformInput.cpp
superMario64/: AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION.md  README.txt  SPEC.md
superMario64/.claude/: settings.local.json
superMario64/include/gameLayer/: animation.h  camera.h  course.h  entity.h  entityManager.h  hud.h  input.h  mario.h  renderer.h  renderer3d.h  world.h
superMario64/resources/courses/: bob_omb_battlefield.glb  bob_omb_battlefield.json  phase4_collision.glb  phase5_interactions.glb
superMario64/resources/models/: bob_omb.glb  boo.glb  goomba.glb  koopa_troopa.glb  mario.glb  test_scene.glb
superMario64/resources/shaders/: basic3d.frag  basic3d.vert  debug_line.frag  debug_line.vert  skinned.frag  skinned.vert
superMario64/src/gameLayer/: animation.cpp  camera.cpp  course.cpp  entity.cpp  entityManager.cpp  gameLayer.cpp  hud.cpp  input.cpp  mario.cpp  renderer.cpp  renderer3d.cpp  world.cpp
superMario64/src/platform/: errorReporting.cpp  glfwMain.cpp  imguiTools.cpp
superMario64/tools/models/: bob_omb.py  bob_omb_battlefield.py  boo.py  goomba.py  koopa_troopa.py  mario.py  phase4_collision.py  phase5_interactions.py  test_scene.py
